@@ -3,6 +3,7 @@
 # $Header$
 #
 
+MODNAME  =  nsdbtest
 MOD      =  nsdbtest.so
 OBJS     =  nsdbtest.o
 include  ../include/Makefile.build
